testsuite/poke.pkl/int-union-type-diag-14.pk
/* { dg-do compile } */

type Foo =
  union string /* { dg-error "invalid type.*\n.*expected integral" } */
  {
  };
